# alloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  todo.txt
include/: stack_alloc.hpp
src/: stack_alloc.cpp
tests/: allocator_tests.cpp
